adds _site files

--- a/apps/cicognara-static/_includes/footer.html
+++ b/apps/cicognara-static/_includes/footer.html
@@ -13,4 +13,6 @@
       </ul>
       <span class="footer-bottom">&copy; {{ 'now' | date: "%Y" }} The Trustees of Princeton University. All rights reserved.</span>
     </section>
-  </footer>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/fuse.js@7.0.0"></script>
