--- a/apps/cicognara-static/assets/main.scss
+++ b/apps/cicognara-static/assets/main.scss
@@ -347,3 +347,25 @@
   }
   
 }
+
+
+
+dl.compact {
+    display: grid;
+    grid-template: auto / auto auto;
+    width: fit-content;
+    column-gap: 1em;
+}
+
+dl.compact dt {
+    grid-column-start: 1;
+}
+
+dl.compact dd {
+    grid-column-start: 2;
+    margin: 0;
+}
+
+ul {
+    list-style: none;
+}
