--- a/apps/cicognara-static/_includes/search_footer.html
+++ b/apps/cicognara-static/_includes/search_footer.html
@@ -1,20 +1,3 @@
-<footer class="site-footer">
-    <section class="partners" id="partners">
-      <ul>
-        <li><a href="https://www.vaticanlibrary.va/home.php" target="_blank"><img src="/assets/images/vatican.png" alt="Biblioteca Apostolica Vaticana" title="Biblioteca Apostolica Vaticana" /></a></li>
-        <li><a href="http://library.columbia.edu/" target="_blank"><img src="/assets/images/columbia.png" alt="Columbia University Library" title="Columbia University Library" /></a></li>
-        <li><a href="http://www.frick.org/research/library" target="_blank"><img src="/assets/images/frick.png" alt="Frick Art Reference Library" title="Frick Art Reference Library" /></a></li>
-        <li><a href="https://www.getty.edu/research/" target="_blank"><img src="/assets/images/getty.png" alt="Getty Research Institute" title="Getty Research Institute" /></a></li>
-        <li><a href="http://library.harvard.edu/" target="_blank"><img src="/assets/images/harvard.png" alt="Harvard University Library" title="Harvard University Library" /></a></li>
-        <li><a href="http://www.ub.uni-heidelberg.de/" target="_blank"><img src="/assets/images/heidelberg.png" alt="Heidelberg University Library" title="Heidelberg University Library" /></a></li>
-        <li><a href="https://library.nga.gov/" target="_blank"><img src="/assets/images/national_gallery_of_art.png" alt="National Gallery of Art Library" title="National Gallery of Art Library" /></a></li>
-        <li><a href="http://library.princeton.edu/" target="_blank"><img src="/assets/images/princeton.png" alt="Princeton University Library" title="Princeton University Library" /></a></li>
-        <li><a href="http://www.library.illinois.edu/" target="_blank"><img src="/assets/images/illinois.png" alt="University of Illinois at Urbana-Champaign Library" title="University of Illinois at Urbana-Champaign Library" /></a></li>
-      </ul>
-      <span class="footer-bottom">&copy; {{ 'now' | date: "%Y" }} The Trustees of Princeton University. All rights reserved.</span>
-    </section>
-</footer>
-
 // <script src="https://cdn.jsdelivr.net/npm/fuse.js@7.0.0"></script>
 <script src="/assets/fuseindex.js"></script>
 
@@ -114,4 +97,12 @@
 
   // Give the focus to the search box
   document.getElementById("searchTerms").focus();
+
+  // Execute search if there is a querystring
+  const searchQuery = new URLSearchParams(window.location.search).get('q');
+  if (searchQuery != "") {
+    document.getElementById("searchTerms").value = searchQuery;
+    runSearch();
+  }
+
 </script>
