reformatting search results like catalogo entries

--- a/apps/cicognara-static/_includes/search_footer.html
+++ b/apps/cicognara-static/_includes/search_footer.html
@@ -40,45 +40,52 @@
 
     // Loop throught results and add them to the page
     for(i = 0; i < results.length; i++) {
-    // var resultEl = document.createElement("p");
       var result = results[i].item;
+      var section = document.createElement("section");
+      section.setAttribute("class", "catalogo-item");
+      searchResultsDiv.appendChild(section);
 
-      var linkEl = document.createElement("a");
-      linkEl.href = `/catalogo/${result.filename}`;
-      linkEl.text = result.title[1];
+      var ciconum = document.createElement("span");
+      ciconum.setAttribute("class", "catalogo-item-label");
+      ciconum.appendChild(document.createTextNode(result.ciconum[0] + ". "));
+      section.appendChild(ciconum);
 
-      // var resultEl = document.createElement("p");
-      
-      var resultDl = document.createElement("dl");
-      resultDl.classList.add("compact");
-      searchResultsDiv.appendChild(resultDl);
+      var bibl = document.createElement("span");
+      bibl.setAttribute("class","catalogo-bibl");
+      section.appendChild(bibl);
 
-      var resultDt = document.createElement("dt");
-      resultDt.appendChild(document.createTextNode('ciconum'));
-      resultDl.appendChild(resultDt);
-      
-      var resultDd = document.createElement("dd");
-      resultDd.appendChild(document.createTextNode(result.ciconum));
-      resultDl.appendChild(resultDd);
-      
-      var resultDt = document.createElement("dt");
-      resultDt.appendChild(document.createTextNode('author'));
-      resultDl.appendChild(resultDt);
-      
-      var resultDd = document.createElement("dd");
-      resultDd.appendChild(document.createTextNode(result.author));
-      resultDl.appendChild(resultDd);
-      
-      var resultDt = document.createElement("dt");
-      resultDt.appendChild(document.createTextNode('title'));
-      resultDl.appendChild(resultDt);
-      
-      var resultDd = document.createElement("dd");
-      resultDd.appendChild(linkEl);
-      resultDl.appendChild(resultDd);
+      if(result.author[0]) {
+        var author = document.createElement("span");
+        author.setAttribute("class", "catalogo-author");
+        author.appendChild(document.createTextNode(result.author[0]));
+        bibl.appendChild(author);
+        bibl.appendChild(document.createTextNode(", "));
+      }
 
-      // resultEl.appendChild(linkEl);
-      // searchResultsDiv.appendChild(resultEl);
+      var title = document.createElement("span");
+      title.setAttribute("class", "catalogo-title");
+      var titleLink = document.createElement("a");
+      titleLink.href = `/catalogo/${result.filename}`;
+      titleLink.text = result.title[0];
+      title.appendChild(titleLink);
+      if(!result.title[0].endsWith(",")) {
+        title.appendChild(document.createTextNode(","));
+      }
+      title.appendChild(document.createTextNode(" "));
+      bibl.appendChild(title);
+
+      if (result.places[0]) {
+        var place = document.createElement("span");
+        place.setAttribute("class", "catalogo-pubPlace");
+        place.appendChild(document.createTextNode(result.places[0]));
+        bibl.appendChild(place);
+        bibl.appendChild(document.createTextNode(" "));
+      }
+
+      var date = document.createElement("span");
+      date.setAttribute("class", "catalogo-date");
+      date.appendChild(document.createTextNode(result.dates[0]));
+      bibl.appendChild(date);
     }
   }
 
