Added magnifying glass

--- a/apps/cicognara-static/_includes/head.html
+++ b/apps/cicognara-static/_includes/head.html
@@ -11,4 +11,5 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
