--- a/apps/cicognara-static/_includes/search_footer.html
+++ b/apps/cicognara-static/_includes/search_footer.html
@@ -12,6 +12,7 @@
           keys: [
               "filename",
               "ciconum",
+              "section_number", 
               "author",
               "title",
               "people",
@@ -89,6 +90,12 @@
       date.setAttribute("class", "catalogo-date");
       date.appendChild(document.createTextNode(result.dates[0]));
       bibl.appendChild(date);
+
+      var catalogoBrowseLink = document.createElement("a");
+      catalogoBrowseLink.href = `/catalogo/section_${result.section_number[0]}#item_${result.ciconum[0]}`;
+      catalogoBrowseLink.text = "Browse full catalogo";
+      bibl.appendChild(catalogoBrowseLink);
+
     }
   }
 
