--- a/apps/cicognara-static/_includes/search_footer.html
+++ b/apps/cicognara-static/_includes/search_footer.html
@@ -92,7 +92,7 @@
       bibl.appendChild(date);
 
       var catalogoBrowseLink = document.createElement("a");
-      catalogoBrowseLink.href = `/catalogo/section_${result.section_number[0]}#item_${result.ciconum[0]}`;
+      catalogoBrowseLink.href = `/catalogo/#section_${result.section_number[0]}_item_${result.ciconum[0]}`;
       catalogoBrowseLink.text = "Browse full catalogo";
       bibl.appendChild(catalogoBrowseLink);
 
