--- a/apps/cicognara-static/_includes/search_footer.html
+++ b/apps/cicognara-static/_includes/search_footer.html
@@ -94,7 +94,7 @@
       var catalogoBrowseButton = document.createElement("div");
       catalogoBrowseButton.setAttribute("class", "catalogo-browse-button");
       var catalogoBrowseLink = document.createElement("a");
-      catalogoBrowseLink.href = `/catalogo/#section_${result.section_number[0]}_item_${result.ciconum[0]}`;
+      catalogoBrowseLink.href = `/catalogo/#item_${result.ciconum[0]}`;
       catalogoBrowseLink.text = "Browse full catalogo";
       catalogoBrowseButton.appendChild(catalogoBrowseLink);
       bibl.appendChild(catalogoBrowseButton);
