--- a/apps/cicognara-static/assets/main.scss
+++ b/apps/cicognara-static/assets/main.scss
@@ -524,17 +524,22 @@ span.catalogo-item-label {
   font-size: 12px;
   line-height: 1.5;
   border-radius: 3px;
-  margin: 1em 0.5em 1em 0;
+  margin: 1em 0.5em 1em 0.5em;
   background: #f1f2eb;
   color: #333;
   border-color: #ccc;
   display: inline-block;
   font-weight: normal;
+  font-style: italic;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
   touch-action: manipulation;
   cursor: pointer;
   border: 1px solid #ccc;
-  width: 110px;
+  min-width: 110px;
+
+  a:link, a:visited {
+    color: #333;
+  }
 }
